--- a/app/package.json
+++ b/app/package.json
@@ -22,11 +22,13 @@
     "@angular/router": "^15.0.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.3",
+    "@capacitor/geolocation": "^4.1.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/preferences": "^4.0.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "cordova-plugin-geolocation": "^4.1.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "timer-node": "^5.0.7",
